add bg utility class, font color class, templates for known flex sections, build our wireframe sections on homepage

--- a/wp-content/themes/launchframe/assets/src/scss/_custom_variables.scss
+++ b/wp-content/themes/launchframe/assets/src/scss/_custom_variables.scss
@@ -22,7 +22,7 @@
 // Colors
 //
 // Grayscale and brand colors for use across Bootstrap.
-
+$white:                     #FFF;
 $gray-dark:                 #373a3c;
 $gray:                      #55595c;
 $gray-light:                #818a91;
