--- a/wp-content/themes/launchframe/templates/footer.twig
+++ b/wp-content/themes/launchframe/templates/footer.twig
@@ -1,1 +1,11 @@
-Copyright {{"now"|date('Y')}}
+<section>
+	<div class="container">
+		<div class="row">
+			<div class="col-sm">
+				<p class="h1">Footer</p>
+				<p>Contact Us</p>
+				<p>Social CTA</p>
+			</div>
+		</div>
+	</div>
+</section>
