--- a/wp-content/themes/launchframe/templates/flex_sections/header.twig
+++ b/wp-content/themes/launchframe/templates/flex_sections/header.twig
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-sm">
-				<p class="{{ item.header_size }}">{{ item.header }}</p>
+				<p class="h1">Section Header</p>
 				<a href="#!" class="btn btn-primary">button</a>
 			</div>
 		</div>
