add font files and variables

--- a/wp-content/themes/launchframe/assets/src/scss/_type.scss
+++ b/wp-content/themes/launchframe/assets/src/scss/_type.scss
@@ -12,6 +12,27 @@
     }
 }
 h1,
+.h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h4,
+.h4
+h5,
+.h5 {
+    font-family: $font-nexa-bold;
+}
+h6,
+.h6,
+p,
+.p {
+    font-family: $font-nexa-light;
+}
+
+h1,
 .h1 {
     font-size: $font-size-h1;
 }
