--- a/wp-content/themes/launchframe/assets/src/scss/_custom_variables.scss
+++ b/wp-content/themes/launchframe/assets/src/scss/_custom_variables.scss
@@ -18,6 +18,26 @@
 //
 // Variable format should follow the `//$component-modifier-state-property` order.
 
+//Fonts
+@font-face {
+    font-family: "NexaBold";
+    src: url("./fonts/NexaBold/Webfonts/nexa_boldfree_macroman/specimen_files/Nexa_Free_Bold-webfont.eot");
+    src: url("./fonts/NexaBold/Webfonts/nexa_boldfree_macroman/specimen_files/Nexa_Free_Bold-webfont.eot?#iefix") format("embedded-opentype"),
+         url("./fonts/NexaBold/Webfonts/nexa_boldfree_macroman/specimen_files/Nexa_Free_Bold-webfont.woff") format("woff"),
+         url("./fonts/NexaBold/Webfonts/nexa_boldfree_macroman/specimen_files/Nexa_Free_Bold-webfont.ttf") format("truetype"),
+         url("./fonts/NexaBold/Webfonts/nexa_boldfree_macroman/specimen_files/Nexa_Free_Bold-webfont.svg") format("svg");
+}
+$font-nexa-bold: "NexaBold", Helvetica, Arial, sans-serif;
+
+@font-face {
+    font-family: "NexaLight";
+    src: url("./fonts/NexaLight/Webfonts/nexa_lightfree_macroman/specimen_files/Nexa_Free_Light-webfont.eot");
+    src: url("./fonts/NexaLight/Webfonts/nexa_lightfree_macroman/specimen_files/Nexa_Free_Light-webfont.eot?#iefix") format("embedded-opentype"),
+         url("./fonts/NexaLight/Webfonts/nexa_lightfree_macroman/specimen_files/Nexa_Free_Light-webfont.woff") format("woff"),
+         url("./fonts/NexaLight/Webfonts/nexa_lightfree_macroman/specimen_files/Nexa_Free_Light-webfont.ttf") format("truetype"),
+         url("./fonts/NexaLight/Webfonts/nexa_lightfree_macroman/specimen_files/Nexa_Free_Light-webfont.svg") format("svg");
+}
+$font-nexa-light: "NexaLight", Helvetica, Arial, sans-serif;
 
 // Colors
 //
