--- a/wp-content/themes/launchframe/templates/page.twig
+++ b/wp-content/themes/launchframe/templates/page.twig
@@ -1,5 +1,5 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	{% include '/flex_sections' %}
+	{# {% include '/flex_sections' %} #}
 {% endblock %}
