--- a/wp-content/themes/launchframe/templates/home.twig
+++ b/wp-content/themes/launchframe/templates/home.twig
@@ -12,7 +12,7 @@
 	<section class="u-bg__color--gray-lighter">
 		<div class="container">
 			<div class="row">
-				<article>
+				<article class="col-sm">
 					<h2>About She is Able</h2>
 					<p>We exist to create transformative outdoor experiences that help marginalized women find healing, well-being, and hope.</p>
 				</article>
