add CTA title to flex sections, add font family to btn-primary

--- a/wp-content/themes/launchframe/templates/page.twig
+++ b/wp-content/themes/launchframe/templates/page.twig
@@ -1,5 +1,140 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	{% include '/flex_sections' %}
+	{# {% include '/flex_sections' %} #}
+	<section>
+		<div class="container">
+			<div class="row">
+				<div class="col-sm">
+					<p class="h1">Header</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Body Content Section</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>section body content</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Donate CTA</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>CTA description</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Partnership CTA</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>CTA description</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Volunteer CTA</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>CTA description</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Endorsements Section</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>Endorsement description</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Form Section</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>Form description</p>
+					<input type="" name="">
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Image Carousel Section</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>Image Carousel description</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Grid Section</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>Grid of Items description</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">List Section</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<ul>
+						<li>list item</li>
+						<li>list item</li>
+						<li>list item</li>
+					</ul>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
+	<section>
+		<div class="container">
+			<h2 class="h1">Needs Section</h2>
+			<div class="row">
+				<div class="col-sm">
+					<h2>Section Header</h2>
+					<p>Needs description</p>
+					<a href="#!" class="btn btn-primary">button</a>
+				</div>
+			</div>
+		</div>
+	</section>
 {% endblock %}
