remove u from bg class

--- a/wp-content/themes/launchframe/templates/home.twig
+++ b/wp-content/themes/launchframe/templates/home.twig
@@ -9,7 +9,7 @@
 			</article>
 		</div>
 	</section>
-	<section class="u-bg__color--gray-lighter">
+	<section class="bg__color--gray-lighter">
 		<div class="container">
 			<div class="row">
 				<article class="col-sm">
@@ -29,7 +29,7 @@
 			</div>
 		</div>
 	</section>
-	<section class="u-bg__color--gray-lighter">
+	<section class="bg__color--gray-lighter">
 		<div class="container">
 			<div class="row">
 				<article class="col-sm">
@@ -62,7 +62,7 @@
 				</div>
 			</div>
 	</section>
-	<section class="u-bg__color--gray-lighter">
+	<section class="bg__color--gray-lighter">
 		<div class="container">
 		<article>
 			<h2>Secondary CTA</h2>
