--- a/wp-content/themes/launchframe/assets/src/scss/_utilities.scss
+++ b/wp-content/themes/launchframe/assets/src/scss/_utilities.scss
@@ -1,7 +1,7 @@
 .clearfix, .cf, .clear {
     overflow: auto;
 }
-.u-bg {
+.bg {
     &__color {
         &--gray-dark {
             background-color: $gray-dark;
