--- a/wp-content/themes/launchframe/assets/src/scss/application.scss
+++ b/wp-content/themes/launchframe/assets/src/scss/application.scss
@@ -6,6 +6,7 @@
 @import "footer";
 @import "type";
 @import "buttons";
+@import "forms";
 
 body {
     color: $gray;
@@ -13,7 +14,6 @@ body {
 }
 section {
     padding: 30px 0;
-    text-align: center;
 }
 article {
     padding: 20px 0;
