--- a/wp-content/themes/launchframe/assets/src/scss/_custom_variables.scss
+++ b/wp-content/themes/launchframe/assets/src/scss/_custom_variables.scss
@@ -49,7 +49,9 @@ $gray-light:                #818a91;
 $gray-lighter:              #eceeef;
 $gray-lightest:             #f7f7f9;
 
-//$brand-primary:             #0275d8;
+$brand-primary:             #0275d8;
+$brand-secondary:             #0275d8;
+
 //$brand-success:             #5cb85c;
 //$brand-info:                #5bc0de;
 //$brand-warning:             #f0ad4e;
