pull in flex section files, tested form submission in Mailchimp

--- a/wp-content/themes/launchframe/templates/flex_sections/body_content.twig
+++ b/wp-content/themes/launchframe/templates/flex_sections/body_content.twig
@@ -3,7 +3,7 @@
 		<div class="row">
 			<div class="col-sm">
 				<h3>section header</h3>
-				<p>section body content</p>
+				<p>{{ item.content }}</p>
 				<a href="#!" class="btn btn-primary">section button</a>
 			</div>
 		</div>
