--- a/wp-content/themes/launchframe/templates/page.twig
+++ b/wp-content/themes/launchframe/templates/page.twig
@@ -1,8 +1,8 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	{# {% include '/flex_sections' %} #}
-	<section>
+	{% include "flex_sections/flex_sections.twig" %}
+	{# <section>
 		<div class="container">
 			<div class="row">
 				<div class="col-sm">
@@ -136,5 +136,5 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> #}
 {% endblock %}
